editted tje skills page

--- a/skills.html
+++ b/skills.html
@@ -25,13 +25,13 @@
         <a href="tel:+1-617-446-3798"><i class="fa fa-mobile" aria-hidden="true"></i></a>
       </nav>
     </header>
-    <div class="col-md-4 skillsBox">
+    <div class="row skillsBox">
       <h2>I am strong in:</h2>
       <img src="img/html.png" alt="">
       <img src="img/css-logo.svg" alt="">
       <img src="img/JavascriptLogo.png" alt="">
     </div>
-    <div class="col-md-4 skillsBox">
+    <div class="row skillsBox">
       <h2>I have worked with:</h2>
       <img src="img/Bootstrap.png" alt="">
       <img src="img/sass-logo.svg" alt="">
@@ -40,12 +40,14 @@
       <img src="img/c-sharp.png" alt="">
       <img src="img/xaml_logo.png" alt="">
     </div>
-    <div class="col-md-4 skillsBox">
+    <div class="row skillsBox">
       <h2>I am studying:</h2>
       <img src="img/cpp_logo.png" alt="">
       <img src="img/java.png" alt="">
       <img src="img/android_logo.png" alt="">
-      <h2>Using:</h2>
+    </div>
+    <div class="row skillsBox lastOne">
+      <h2>I use:</h2>
       <img src="img/atom.png" alt="">
       <img src="img/visualStudio.ico" alt="">
       <img src="img/Android_Studio_icon.svg.png" alt="">
