worked on the contact page and made other edits, still have to add more work

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,29 @@
         <a href="tel:+1-617-446-3798"><i class="fa fa-mobile" aria-hidden="true"></i></a>
       </nav>
     </header>
+    <div class="">
+      <div class="col-md-8">
+        <form class="" action="mailto:ashleym.laing@gmail.com" method="post">
+          <label>Name:
+            <input type="text" name="" value="" placeholder="Your Full Name">
+          </label>
+          <label>Email:
+            <input type="email" name="" value="" placeholder="Enter Your Email">
+          </label>
+          <label class="messageLabel">Your Message:
+            <textarea name="name" rows="8" cols="46" placeholder="Type Your Message Here"></textarea>
+          </label>
+          <button type="submit" name="button">Send</button>
+        </form>
+      </div>
+      <div class="col-md-4 contact">
+        <p>Email: <a href="mailto:ashleym.laing@gmail.com">ashleym.laing@gmail.com</a></p>
+        <p>Phone: <a href="tel:+6174463789">(617)446-3789</a></p>
+        <p>GitHub: <a href="https://github.com/ashleymlaing">ashleymlaing</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/ashley-laing/">Ashley Laing</a></p>
+
+      </div>
+    </div>
     <footer>
       <a href="portfolio.html">Portfolio</a>
       <a href="skills.html">My Skills</a>
