--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,7 @@
     </div>
     <div class="col-md-8 resumeSection">
       <img src="img/Resume Ashley Laing 4.png" alt="">
+      <a href="resume/Resume.pdf" target="_blank">Print My Resume</a>
     </div>
     <div class="col-md-2 logoBoxes">
       <img src="img/microsoft.png" alt="">
